Add index,styling and js file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="content">
       <h3>EVERY MONUMENT HAS A STORY</h3>
       <p>Are you ready to listen?</p>
-      <a href="index.html" class="btn">discover more</a>
+      <a href="index1.html" class="btn">discover more</a>
       <div class="controls">
         <span class="vid-btn active" data-src="InShot_20250222_001236601.mp4"></span>
       </div>
@@ -113,6 +113,135 @@
       <h2>98% Our Travelers are Happy</h2>
     </div>
   </section>
+   <!--==============Places===================-->
+   <section class="packages" id="packages">
+    <div class="packages-text">
+        <small>FEATURED TOURS PACKAGES</small>
+        <h2>Favourite Places</h2 </div>
+
+        <div class="cards">
+            <div class="card">
+                <div class="zoom-img">
+                    <div class="img-card">
+                        <img src="tajhotel.jpg" width="350px" ;height="1rem">
+                    </div>
+                </div>
+
+                <div class="text">
+                    <span class="rating">⭐⭐⭐⭐⭐</span>
+                    <h2>Taj Resort</h2>
+                    <p class="cost">₹5870 / Per Person</p>
+                    <div class="card-box">
+                        <p class="location">🕓 3 Days 3Km from Taj Mahal</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="zoom-img">
+                    <div class="img-card">
+                        <img src="hampihotel.jpg" width="350px">
+                    </div>
+                </div>
+
+                <div class="text">
+                    <span class="rating">⭐⭐⭐⭐⭐</span>
+                    <h2>Dark villa</Table></h2>
+                    <p class="cost">₹3870 / Per Person</p>
+                    <div class="card-box">
+                        <p class="location">🕓 3 Days 2Km from Hampi</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="zoom-img">
+                    <div class="img-card">
+                        <img src="qutub1hotel.jpg" width="350px">
+                    </div>
+                </div>
+
+                <div class="text">
+                    <span class="rating">⭐⭐⭐⭐⭐</span>
+                    <h2>Lavish villa</h2>
+                    <p class="cost">₹4870 / Per Person</p>
+                    <div class="card-box">
+                        <p class="location">🕓 3 Days 1.5Km from QutubMinar</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="zoom-img">
+                    <div class="img-card">
+                        <img src="ajantahotel.jpg" width="350px">
+                    </div>
+                </div>
+
+                <div class="text">
+                    <span class="rating">⭐⭐⭐⭐⭐</span>
+                    <h2>Heritage hotel</h2>
+                    <p class="cost">₹5470 / Per Person</p>
+                    <div class="card-box">
+                        <p class="location">🕓 3 Days 4.5Km from caves</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="zoom-img">
+                    <div class="img-card">
+                        <img src="khajuraohotel.jpg" width="350px">
+                    </div>
+                </div>
+
+                <div class="text">
+                    <span class="rating">⭐⭐⭐⭐⭐</span>
+                    <h2>Tilak palace</h2>
+                    <p class="cost">₹6870 / Per Person</p>
+                    <div class="card-box">
+                        <p class="location">🕓 3 Days 4Km from khajuraho</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="zoom-img">
+                    <div class="img-card">
+                        <img src="konarkhotel.jpg">
+                    </div>
+                </div>
+
+                <div class="text">
+                    <span class="rating">⭐⭐⭐⭐⭐</span>
+                    <h2>Grand villa</h2>
+                    <p class="cost">₹3500 / Per Person</p>
+                    <div class="card-box">
+                        <p class="location">🕓 3 Days 3Km from Sun temple</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
+ <!--===========About Us===============-->
+ <section class="About-Us" id="About-Us">
+  <div class="about-img">
+      <img src="footer.jpg">
+  </div>
+  <div class="about-text">
+      <small>ABOUT OUR COMPANY</small>
+      <h2>We are Go Trip Ravels Support Company</h2>
+      <p>Our company was stablised in 1998 by Sri Sheetal Nayaran.</p>
+
+      <label><input type="checkbox" checked>certified by Indian Tour and travel Agrency</label>
+      <label><input type="checkbox" checked>27 year of experiences.</label>
+      <label><input type="checkbox" checked>cooperative and understanding Staff and giudes.</label>
+      <label><input type="checkbox" checked>150+ company visite.</label>
+      <a href="#">ABOUT US</a>
+  </div>
+</section>
+
 
   <!--===========Footer=================-->
   <footer>
