add html and css file

--- a/golden_temple.html
+++ b/golden_temple.html
@@ -76,7 +76,7 @@
     </li>
     <p>The Golden Temple is not just a place of worship—it is a symbol of faith, devotion, and unity that continues to
       inspire people across the globe.</p>
-    <button><a href="index.html">back</a></button>
+    <button><a href="index1.html">back</a></button>
   </ul>
 </body>
 
