--- a/hampi.html
+++ b/hampi.html
@@ -72,6 +72,6 @@
     <li>To experience the vibrant atmosphere of the Hampi Bazaar.</li>
   </ul>
 </body>
-<button><a href="index.html">back</a></button>
+<button><a href="index1.html">back</a></button>
 
 </html>
