--- a/khajuraho.html
+++ b/khajuraho.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Khajuraho Temple</title>
 </head>
+<style>
+    body {
+        background-image: url('kh1.jpg');
+        background-size: cover;
+        height: 500px;
+        font-weight: bold;
+    }
+
+    h3 {
+        color: white;
+    }
+
+    a {
+        color: black;
+    }
+
+    button {
+        background-color: rgb(214, 218, 221);
+        color: black;
+        text-align: center;
+        width: 10%;
+        font-size: medium;
+        font-weight: bold;
+        border-radius: 5px;
+    }
+</style>
+
 <body>
-    <h1></h1>
+    <header>
+        <h1>KHAJURAHO TEMPLE</h1>
+    </header>
+    <h3>Description</h3>
+    <p>The Khajuraho Group of Monuments is a collection of Hindu and Jain temples in Madhya Pradesh, India.
+        The temples are known for it's Nagara style architecture, sculptures, and erotic statues.The Chandela dynasty
+        built the temples between 950 and 1050 AD.
+        The temples are known for their erotic sculptures.The sculptures include gods, goddesses, musicians, dancers,
+        animals, and celestial nymphs.
+        The name Khajuraho comes from the Sanskrit words "kharjura" (date palm) and "vahaka" (bearer).</p>
+
+    <h3>Intersting Facts</h3>
+    <ul>
+        <li>
+            <p>The Khajuraho temples are part of the Khajuraho Group of Monuments, which was inscribed on the UNESCO
+                World Heritage List in 1986.</p>
+        </li>
+        <li>
+            <p>The temples depict scenes from everyday life, such as farming, hunting, and performing arts.</p>
+        </li>
+        <li>
+            <p>The Matangeshwar Temple in Khajuraho has a Shivling that is believed to grow year after year.</p>
+        </li>
+        <li>
+            <p>The temples' design highlights Shiva, who controls the cosmic dance of time.</p>
+        </li>
+        <li>
+            <p>The temples were once part of a larger capital that contained about 85 temples.</p>
+        </li>
+    </ul>
+    <h3>Location</h3>
+    <p>The Khajuraho Group of Monuments is located in the Chhatarpur district of Madhya Pradesh, India.</p>
+    <button><a href="index1.html">back</a></button>
 </body>
+
 </html>
