--- a/tajmahal.html
+++ b/tajmahal.html
@@ -59,7 +59,7 @@
     <li>
       <p>To seek revenge on Shah Jahan the workers made a hole in the roof.</p>
     </li>
-    <button><a href="index.html">back</a></button>
+    <button><a href="index1.html">back</a></button>
   </ul>
 </body>
 
