--- a/index1.html
+++ b/index1.html
@@ -70,7 +70,7 @@ a{
 }
 </style>
 <body>
-    <h1>Wonders of india <a href="main.html" class="hero">Back to home</a></h1>
+    <h1>Wonders of india <a href="index.html" class="hero">Back to home</a></h1>
     <section class="wonders-container">
         <div class="wonder">
             <img src="tajs.jpg" alt="Taj Mahal">
