--- a/book.html
+++ b/book.html
@@ -131,7 +131,7 @@
                     <h3>Leaving</h3>
                     <input type="date">
                 </div>
-                <input type="submit" class="btn" value="Submit"><a href="main.html">back to home</a>
+                <input type="submit" class="btn" value="Submit"><a href="index.html">back to home</a>
             </form>
     </section>
 
